src/objects/Template__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Template__c</fullName>
        <externalId>true</externalId>
        <label>Name Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recomendation__c</fullName>
        <label>Recomendation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>